--- a/lesson3/src/README
+++ b/lesson3/src/README
@@ -1,1 +1,13 @@
-
+# Домашнее задание к занятию «Управляющие конструкции в коде Terraform»
+---
+## Задание 1
+---
+1. Изучите проект.
+2. Заполните файл personal.auto.tfvars.
+3. Инициализируйте проект, выполните код. Он выполнится, даже если доступа к preview нет.
+---
+### Ответы:
+1. Изучил
+2. Заполнил
+3. terraform init, terraform apply
+Apply complete! Resources: 3 added, 0 changed, 0 destroyed.
